--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/themes": "^2.0.0-rc.3",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "next": "^13.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
+    "daisyui": "^3.8.1",
+    "i": "^0.3.7",
     "postcss": "latest",
     "tailwindcss": "latest",
     "typescript": "latest"
