--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/themes": "^2.0.0-rc.3",
+    "firebase": "^10.4.0",
     "next": "^13.5.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.4.2"
   },
   "devDependencies": {
     "@types/node": "latest",
